--- a/_404.html
+++ b/_404.html
@@ -5,106 +5,6 @@ title: "页面未找到 - 404"
 nav_exclude: true
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 50px auto;
-    max-width: 600px;
-    text-align: center;
-    padding: 20px;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 6em;
-    line-height: 1;
-    letter-spacing: -1px;
-    color: #e74c3c;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
-  }
-  .error-message {
-    font-size: 1.2em;
-    color: #666;
-    margin: 20px 0;
-  }
-  .suggestions {
-    background: #f8f9fa;
-    border-radius: 8px;
-    padding: 20px;
-    margin: 30px 0;
-    text-align: left;
-  }
-  .suggestions h3 {
-    color: #333;
-    margin-bottom: 15px;
-  }
-  .suggestions ul {
-    list-style: none;
-    padding: 0;
-  }
-  .suggestions li {
-    margin: 10px 0;
-    padding: 8px 0;
-    border-bottom: 1px solid #eee;
-  }
-  .suggestions li:last-child {
-    border-bottom: none;
-  }
-  .suggestions a {
-    color: #007bff;
-    text-decoration: none;
-    font-weight: 500;
-  }
-  .suggestions a:hover {
-    text-decoration: underline;
-  }
-  .search-box {
-    margin: 30px 0;
-  }
-  .search-box input {
-    width: 60%;
-    padding: 12px 20px;
-    border: 2px solid #ddd;
-    border-radius: 25px;
-    font-size: 16px;
-    outline: none;
-  }
-  .search-box input:focus {
-    border-color: #007bff;
-  }
-  .search-box button {
-    padding: 12px 20px;
-    background: #007bff;
-    color: white;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-left: 10px;
-  }
-  .search-box button:hover {
-    background: #0056b3;
-  }
-  .home-button {
-    display: inline-block;
-    padding: 12px 30px;
-    background: #28a745;
-    color: white;
-    text-decoration: none;
-    border-radius: 25px;
-    font-weight: 500;
-    margin: 20px 10px;
-    transition: background 0.3s;
-  }
-  .home-button:hover {
-    background: #218838;
-    color: white;
-    text-decoration: none;
-  }
-  .emoji {
-    font-size: 2em;
-    margin: 20px 0;
-  }
-</style>
-
 <div class="container">
   <div class="emoji">😵</div>
   <h1>404</h1>
@@ -116,10 +16,10 @@ nav_exclude: true
 
   <div class="search-box">
     <input type="text" id="searchInput" placeholder="搜索文章..." onkeypress="handleSearch(event)">
-    <button onclick="performSearch()">搜索</button>
+    <button onclick="performSearch()" class="btn">搜索</button>
   </div>
 
-  <div class="suggestions">
+  <div class="card">
     <h3>💡 也许您想找这些内容：</h3>
     <ul>
       <li><a href="/">🏠 返回首页</a></li>
@@ -131,8 +31,8 @@ nav_exclude: true
   </div>
 
   <div>
-    <a href="/" class="home-button">🏠 回到首页</a>
-    <a href="javascript:history.back()" class="home-button">⬅️ 返回上页</a>
+    <a href="/" class="btn">🏠 回到首页</a>
+    <a href="javascript:history.back()" class="btn">⬅️ 返回上页</a>
   </div>
 
   <div style="margin-top: 40px; color: #999; font-size: 0.9em;">
